# synapse-backend-agents-jc

./: # Code Citations.md  .cursorrules  .env  .env.example  .env.fixed  .eslintrc.js  .flake8  .gitignore  .npmrc  .pre-commit-config.yaml  .setup_status  .yarnrc  ANALISE_TEST_ENDPOINTS_UNIFIED.md  ARCHITECTURE_GUIDE.md  AUTHENTICATION_SYSTEM_CLEANED.md  BACKEND-ENV-RENDER-COMPLETO.env  CHANGELOG.md  COMPREHENSIVE_SCHEMA_ANALYSIS.md  CONTRIBUTING.md  DEPLOY-VERCEL.md  DEVELOPMENT.md  Dockerfile  ENV_SETUP_COMPLETE.md  FRONTEND_AUTH_SERVICE_FIX.md  FRONTEND_IMPLEMENTATION_GUIDE.md  GUIA-PRODUCAO-COMPLETO.md  GUIA_CONFIGURACAO_ENV.md  Guia de Implantação do Backend SynapScale.md  HYDRATION_FIX_COMPLETE.md  LICENSE  MASCARAMENTO_DESATIVADO.md  Makefile  NOMENCLATURA.md  OPENAPI_FASTAPI_GUIDE.md  PRECISE_MAPPING_ANALYSIS.md  PROTECTED_ROUTE_FIX.md  Procfile  QUICK-START.md  README-FINAL.md  README.md  (+204 more)
.codex/: .gitignore  README.md  config.json  config.toml  instructions.md  setup.sh
.cursor/: mcp.json.example
.gemini/: settings.json
.next/: app-build-manifest.json  trace
.storybook/: main.js
.taskmaster/: config.json  state.json
alembic/: README  env.py  env.py.backup  env_new.py  env_old.py
api/: chat.py  requirements.txt
app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
backup_files/: test_model_import.py
components/: adaptive-personalization.tsx  canvas-context-menu.tsx  canvas-controls.tsx  canvas-grid.tsx  canvas-quick-actions.tsx  canvas.tsx  client-layout.tsx  command-palette.tsx  connection-action-buttons.tsx  connection-actions.tsx  connection-context-menu.tsx  connection-editor.tsx  execution-controls.tsx  executions-view.tsx  index.js  index.ts  keyboard-shortcuts.tsx  layout-wrapper.tsx  mini-map.tsx  multimodal-integration.tsx  node-context-menu.tsx  node-details-panel.tsx  node-editor-dialog.tsx  node-panel.tsx  node-quick-actions.tsx  sidebar.tsx  tab-integration.tsx  theme-selector.tsx  theme-toggle.tsx  workflow-canvas.tsx  workflow-editor.tsx  workflow-header.tsx  workflow-node.tsx
config/: alembic.ini  application-integrity.ts  navigation-config.ts  navigation.ts  navigation.tsx  node-system-config.ts  pyproject.toml
constants/: agent-constants.ts
context/: app-context.tsx  auth-context.tsx  chat-context.tsx  code-template-context.tsx  custom-category-context.tsx  index.ts  marketplace-context.tsx  node-definition-context.tsx  node-template-context.tsx  sidebar-context.tsx  user-variable-context.tsx  variable-context.tsx  workflow-context.tsx
contexts/: ai-friendly-canvas-context.tsx  app-context.tsx  canvas-context.tsx  theme-context.tsx
data/: code-templates.ts  manual-trigger-node.ts
docs/: CHANGELOG.md  CONTRIBUTING.md  CORREÇÕES_E_USO_BACKEND.md  CORREÇÕES_E_USO_BACKEND.md  GUIA_COMPLETO_SYNAPSCALE.md  Guia de Implantação do Backend SynapScale.md  INSTALLATION.md  OTIMIZACAO_AVANCADA.md  README.md  SECURITY.md  SETUP_GUIDE.md  SUMARIO_SCRIPTS.md  ai-friendly-architecture.md  ai_friendly_documentation.json  architecture.md  canvas-context.md  collapsible-sidebar-guide.md  component-parametrization-guide.md  development_guide.md  guia_detalhado.md  llm_integration_analysis.md  padroes_documentacao.py  relatorio_otimizacao.md  reorganization_report.md  repository_analysis.md  sidebar-implementation-guide.md  stripe_integration_plan.md  theme-context.md  todo.md  use-nodes-hook.md  user_api_keys_implementation.md
frontend/: jest.config.js  jest.setup.js  pnpm-lock.yaml  tailwind.config.ts
hello-prisma/: backup-database.js  backup-script.js  check-status.js  create-user.js  package-lock.json  package.json  quick-test.js  simple-test.js  test-all-tables.js  test-complete-migration.js  test-connection.js
hooks/: index.ts  use-agents.tsx  use-ai-friendly-state.ts  use-canvas-navigation.ts  use-canvas-pan-zoom.ts  use-canvas-state.ts  use-canvas-transform.ts  use-canvas-viewport.ts  use-chat-message.tsx  use-chat.tsx  use-code-validator.ts  use-conversations.ts  use-custom-attributes.ts  use-custom-nodes.ts  use-debounce-value.ts  use-debounce.ts  use-dialog.ts  use-disclosure.ts  use-drag-drop-node.ts  use-drag-drop.ts  use-form.ts  use-hotkeys.ts  use-keyboard-shortcuts.ts  use-local-storage.ts  use-marketplace.ts  use-media-query.ts  use-navigation.ts  use-node-connections.ts  use-node-definition-integration.ts  use-node-drag.ts  use-node-editor-dialog.ts  use-node-execution.ts  use-node-operations.ts  use-node-operations.tsx  use-nodes.ts  use-nodes.tsx  use-outside-click.ts  use-pagination.ts  use-panel-resize.ts  use-search-filters.ts  (+7 more)
lib/: ai-utils.ts  analytics-hooks.tsx  analytics-provider.tsx  api.ts  api_optimized.ts  atomic-design.ts  config.ts  config_optimized.ts  marketplace-api.ts  performance-optimizations.ts
memory-bank/: README.md  __init__.py  integration.py  run_migrations.py  setup.py
migrations/: 001_create_user_variables.py  002_create_workflow_executions.py  003_create_templates.py  004_create_executor_configs.py  005_create_fase4_tables.py
prisma/: schema.prisma  schema_basic.prisma  schema_minimal.prisma  schema_simplified_backup.prisma  schema_test.prisma  synapse.db-journal
scripts/: API_REORGANIZATION_PRD.txt  PRD-TEMPLATE.txt  PRD.txt  README.md  analyze_repository.sh  analyze_sync_issues.py  check-duplicate-functions.js  clean_temp_files.sh  endpoint_analyzer.py  final_cleanup.sh  fix_alembic_heads.py  fix_all_list_imports.py  fix_all_schema_imports.py  fix_all_schema_inconsistencies.py  fix_create_index_syntax.py  fix_create_table_syntax.py  fix_critical_sync_issues.py  fix_double_response.py  fix_duplicate_paths.py  fix_duplicate_paths_json_keys.py  fix_duplicate_paths_json_values.py  fix_duplicate_schema.py  fix_endpoint_schema_imports.py  fix_endpoint_user_imports.py  fix_env_files.sh  fix_init_structure.py  fix_migration_schemas.py  fix_migration_types.py  fix_remaining_schemas.py  fix_requirements.sh  fix_schema_imports.py  fix_schema_references.py  fix_setup_scripts.sh  fix_sync_issues.py  generate_endpoints.py  organize_requirements.sh  populate_complete_llms.py  (+15 more)
(+1959 files in other folders)
